home page update

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     <div class="row">
         <div class="col-lg-7">
             <div class="vps">
-                <h1>I’m Viral Patel Studio</h1>
+                <h1>I’m Viral Patel</h1>
                 <h4>UX/UI Designer at In-Solutions Global Ltd.</h4>
 
                 <div class="vps1">
