home and projects page merged

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,7 +5,7 @@
     <span><img src="assets/img/viral-patel-studio-logo.svg"></span>
     <span class="example-spacer"></span>
     <button mat-button routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</button>
-    <button mat-button>Projects</button>
+    <button mat-button routerLink="/projects" routerLinkActive="active">Projects</button>
     <button mat-button>Testimonials</button>
     <button mat-button>Blogs</button>
     <button mat-button>Tweets</button>
