--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,1 +1,79 @@
-<p>projects works!</p>
+
+
+
+<div class="container">
+    <h1 class="projects">Projects</h1>
+    <div class="row">
+        <div class="col-lg-6">
+            <div class="projects1">
+                <h2>LinkedIn Web Layout Redesign - User Profile</h2>
+                <ul>
+                    <li>1st Jan 2020</li>
+                    <li>|</li>
+                    <li>Software: Figma</li>
+                </ul>
+                <p>#graphic #design #career #user #experience #interface #ux #ui</p>
+            </div>
+        </div>
+
+        <div class="col-lg-6">
+            <div class="projects1">
+                <h2>LinkedIn Web Layout Redesign - User Profile</h2>
+                <ul>
+                    <li>1st Jan 2020</li>
+                    <li>|</li>
+                    <li>Software: Figma</li>
+                </ul>
+                <p>#graphic #design #career #user #experience #interface #ux #ui</p>
+            </div>
+        </div>
+
+        <div class="col-lg-6">
+            <div class="projects1">
+                <h2>LinkedIn Web Layout Redesign - User Profile</h2>
+                <ul>
+                    <li>1st Jan 2020</li>
+                    <li>|</li>
+                    <li>Software: Figma</li>
+                </ul>
+                <p>#graphic #design #career #user #experience #interface #ux #ui</p>
+            </div>
+        </div>
+
+        <div class="col-lg-6">
+            <div class="projects1">
+                <h2>LinkedIn Web Layout Redesign - User Profile</h2>
+                <ul>
+                    <li>1st Jan 2020</li>
+                    <li>|</li>
+                    <li>Software: Figma</li>
+                </ul>
+                <p>#graphic #design #career #user #experience #interface #ux #ui</p>
+            </div>
+        </div>
+
+        <div class="col-lg-6">
+            <div class="projects1">
+                <h2>LinkedIn Web Layout Redesign - User Profile</h2>
+                <ul>
+                    <li>1st Jan 2020</li>
+                    <li>|</li>
+                    <li>Software: Figma</li>
+                </ul>
+                <p>#graphic #design #career #user #experience #interface #ux #ui</p>
+            </div>
+        </div>
+
+        <div class="col-lg-6">
+            <div class="projects1">
+                <h2>LinkedIn Web Layout Redesign - User Profile</h2>
+                <ul>
+                    <li>1st Jan 2020</li>
+                    <li>|</li>
+                    <li>Software: Figma</li>
+                </ul>
+                <p>#graphic #design #career #user #experience #interface #ux #ui</p>
+            </div>
+        </div>
+    </div>
+</div>
