--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
 
+@import url('https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&display=swap');
+
+
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+body {
+    margin: 0;
+    font-family: 'DM Sans', sans-serif !important;
+    font-size: 16px; 
+}
+
+
+.mat-button{
+    font-family: 'DM Sans', sans-serif !important;
+    font-size: 16px !important;
+    font-weight: initial; 
+}
