--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -6,11 +6,9 @@
     <div class="row">
         <div class="col-lg-6">
             <div class="projects1">
-                <h2>LinkedIn Web Layout Redesign - User Profile</h2>
+                <h2>Barriers International</h2>
                 <ul>
-                    <li>1st Jan 2020</li>
-                    <li>|</li>
-                    <li>Software: Figma</li>
+                    <li>Software: Photoshop, HTML, MailChimp</li>
                 </ul>
                 <p>#graphic #design #career #user #experience #interface #ux #ui</p>
             </div>
@@ -18,11 +16,9 @@
 
         <div class="col-lg-6">
             <div class="projects1">
-                <h2>LinkedIn Web Layout Redesign - User Profile</h2>
+                <h2>Bharat Andolan</h2>
                 <ul>
-                    <li>1st Jan 2020</li>
-                    <li>|</li>
-                    <li>Software: Figma</li>
+                    <li>Software: WordPress</li>
                 </ul>
                 <p>#graphic #design #career #user #experience #interface #ux #ui</p>
             </div>
@@ -30,11 +26,10 @@
 
         <div class="col-lg-6">
             <div class="projects1">
-                <h2>LinkedIn Web Layout Redesign - User Profile</h2>
+                <h2>Find it Parts</h2>
                 <ul>
-                    <li>1st Jan 2020</li>
-                    <li>|</li>
-                    <li>Software: Figma</li>
+                    <li>Software: Photoshop, Figma</li>
+                    <li>https://www.finditparts.com/</li>
                 </ul>
                 <p>#graphic #design #career #user #experience #interface #ux #ui</p>
             </div>
