--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -2,5 +2,6 @@
 
 <footer>
     <p>Designed in <img src="assets/img/figma.svg"> with <img src="assets/img/heart.svg"> Viral Patel Studio</p>
-    <span>Copyright <img src="assets/img/copyright.svg"> 2015 - 2022. All rights reserved </span>
+    <span>Copyright <img src="assets/img/copyright.svg"> 2015 - 2022. All rights reserved.</span>
+    <span>Terms & Conditions | Privacy Policy</span>
 </footer>
