--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,16 +5,17 @@
     <span><img src="assets/img/viral-patel-studio-logo.svg"></span>
     <span class="example-spacer"></span>
     <button mat-button routerLink="" routerLinkActive="active" [routerLinkActiveOptions]="{exact: true}">Home</button>
-    <button mat-button>About</button>
-    <button mat-button>Design Mentor</button>
-    <button mat-button>Business Strategist</button>
-    <button mat-button>Brand Consultant</button>
-    <button mat-button>Motivational Speaker</button>
+    <button mat-button [matMenuTriggerFor]="menu">About</button>
+    <mat-menu #menu="matMenu">
+        <button mat-menu-item routerLink="/design-mentor" routerLinkActive="active">Design Mentor</button>
+        <button mat-menu-item routerLink="/business-strategist" routerLinkActive="active">Business Strategist</button>
+        <button mat-menu-item routerLink="/brand-consultant" routerLinkActive="active">Brand Consultant</button>
+        <button mat-menu-item routerLink="/motivational-speaker" routerLinkActive="active">Motivational Speaker</button>
+    </mat-menu>
     <button mat-button routerLink="/projects" routerLinkActive="active">Projects</button>
     <button mat-button>Blogs</button>
     <button mat-button>Tweets</button>
-    <button mat-button>Testimonials</button>
+    <button mat-button routerLink="/testimonials" routerLinkActive="active">Testimonials</button>
     <button mat-button>Hire Me</button>
-    <button mat-button>Privacy Policy</button>
-    <button mat-raised-button>Contact</button>
+    <button mat-button>Contact</button>
 </mat-toolbar>
