blogs page created

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,8 +13,8 @@
         <button mat-menu-item routerLink="/motivational-speaker" routerLinkActive="active">Motivational Speaker</button>
     </mat-menu>
     <button mat-button routerLink="/projects" routerLinkActive="active">Projects</button>
-    <button mat-button>Blogs</button>
-    <button mat-button>Tweets</button>
+    <button mat-button routerLink="/blogs" routerLinkActive="active">Blogs</button>
+    <!-- <button mat-button>Tweets</button/> -->
     <button mat-button routerLink="/testimonials" routerLinkActive="active">Testimonials</button>
     <button mat-button>Hire Me</button>
     <button mat-button>Contact</button>
