blogs page created

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -16,6 +16,6 @@
     <button mat-button routerLink="/blogs" routerLinkActive="active">Blogs</button>
     <!-- <button mat-button>Tweets</button/> -->
     <button mat-button routerLink="/testimonials" routerLinkActive="active">Testimonials</button>
-    <button mat-button>Hire Me</button>
-    <button mat-button>Contact</button>
+    <!-- <button mat-button>Hire Me</button>
+    <button mat-button>Contact</button> -->
 </mat-toolbar>
