changes made on 4 intro pages

--- a/src/app/blogs/blogs.component.html
+++ b/src/app/blogs/blogs.component.html
@@ -19,10 +19,10 @@
         <div class="col-lg-4">
             <div class="blogs">
                 <a mat-button routerLink="/blogs/blog-details">
-                    <h2>Creative People Are Not The Pressure Cooker: Understanding The Misconception</h2>
+                    <h2>How to change your career from Graphic Design to UX Ui Designer?</h2>
                     <img src="assets/img/blogs.png">
                     <p>
-                        The stereotype of the “tortured artist” or the “crazy genius” has been perpetuated for centuries, but it is far from the truth.
+                        How to change your career from Graphic Design to UX Ui Designer?
                     </p>
                 </a>
             </div>
