--- a/src/app/brand-consultant/brand-consultant.component.html
+++ b/src/app/brand-consultant/brand-consultant.component.html
@@ -1,1 +1,18 @@
-<p>brand-consultant works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="about_page">
+                <h1>Brand Consultant</h1>
+                <ul>
+                    <li>For a business, the main objective is to sell its products and services to its potential customers, and enhance its profit. But, for a start-up or a noob businessman, it becomes quite challenging to achieve this target. In that case, the best option is to hire a Brand Consultant for your business, and save it from demolishing.</li>
+                    <li>A Brand Consultant is a person who has a general and in-depth marketing expertise. He uses his experience to analyze your business, find out what you are lacking, and provide solutions to the company to help you successfully sell the products and services for attaining the business goals and objectives. A Brand Consultant will find ways to further enhance the branding of a product or service, as well as develop a marketing plan through analysis of current market data and trends. So, if you are in search of an experienced and determinant Brand Consultant, then you can stop your search at Viral.</li>
+                    <li>As a Brand Consultant, Viral will walk the audience through the necessary steps of taking your brand to the next level. Also, he’ll summarize the branding and creative strategies that helped him guide the creative minds from a dream to a global community of designers. Not only this, he will help improve your business’ profitability by enhancing the concepts, marketing structure, and strategy.</li>
+                    <li>Design plays a crucial role in developing a startup into a business brand. Not only for your visuals, but also for the message that your brand wants to deliver. Viral will provide you with the best design proposals that you can use to increase the growth of your company. Work shared is done with much more efficiency, hence he has a team of expert designers, who are best in exploring their creative ideas, and thus making your brand stand out from your competitors.</li>
+                    <li>His then-unprecedented skills and branding techniques include innovative ways in which he uses social media, brand integration, and his expertise on design culture. Also, the best part about his work-form is that he discusses business problems, solutions, issues with everyone in the project. And he finds out ways to how to make them relatable and functional to everyone, from the CEO to interns.</li>
+                    <li>For a Brand Consultant, marketing plays a vital role. It is through marketing that you build awareness of your brand and its products and generate sales. Viral understands this concept well, and he believes in expressing who your business is for and what it's all about. He thinks of marketing as your business-generating toolkit and branding as your overall approach to reaching your target audience.</li>
+                    <li>Viral has worked with renowned companies like Just Dial, ISG, etc. to polish his skills. Also, over the decade, he has evolved into not only a creative icon, but also a well-respected Design Mentor and a Business Coach. He will examine the needs of the corporation, dissect the problems, and create manageable creative solutions for brand growth.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
