--- a/src/app/business-strategist/business-strategist.component.html
+++ b/src/app/business-strategist/business-strategist.component.html
@@ -1,1 +1,21 @@
-<p>business-strategist works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="about_page">
+                <h1>Business Strategist</h1>
+                <ul>
+                    <li>Viral has worked with many companies in the decade of his experience, and thus his portfolio shows how he became a better Business Strategist with every new project he worked on. In addition, he has also helped many start-up entrepreneurs to have profits in their businesses.</li>
+                    <li>When you get the right approach, things become easier for you. Viral knows this very well and helps you align your actions in the right direction with the needed approach. Being a Business Strategist, Viral will analyze what's lacking from your end and take corrective measures. He will build strategies that will help your startup to grow and lead to success.</li>
+                    <li>Viral will invest time to provide you with guidance on how to improve your skills that your business needs to improve performance and growth. Working with online strategies, like designs, websites, SEO, paid campaigns, etc., is quite challenging initially. He is here to help you with these strategies. In this way, your sales will increase creatively and with ease.</li>
+                    <li>For a start-up, it becomes tough to take the business to new heights because of a lack of experience and knowledge. Viral will explore overall business strategies and turn your start-up into a flourishing business. He will enhance your brand and make it a renowned name in the market.</li>
+                    <li>Communication is a key to success, being a business strategist doesn't mean he will make decisions independently. Viral will discuss every business idea, problem, solution, strategy, and thought with you. Also, he will make you learn these business strategies for the future.</li>
+                    <li>Viral knows that every businessman wants his business to remain in the market in the long run. Therefore, he understands your business needs for the long term and articulates the strategies accordingly. Also, he ensures the delivery of a consistent and compelling brand message, keeping social norms in mind.</li>
+                    <li>The best way to stay in the competition is to keep an eye on your competitors and current trends. Hence, Viral uses his expertise to analyze the market trends and plans his strategies. Also, he finds ways to further enhance a product's or service's branding by analyzing the competitors' moves and strategies.
+                    </li>
+                    <li>Viral gathers all the ideas, strategies, and thoughts, creates viable plans, executes the plans rationally, and ultimately turns those ideas into reality. Then, he advocates the best course of action to achieve the desired business goals. His ultimate goal is to make your business reach the sky and improve profitability.</li>
+                    <li>Invest your trust in Viral’s learnings and experience and watch your business reach new heights by bringing organic traffic to your business. With multiple businesses on his resume and years of articulating experience, Viral can inspire and convert potential customers into long-lasting clients.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
