--- a/src/app/design-mentor/design-mentor.component.html
+++ b/src/app/design-mentor/design-mentor.component.html
@@ -1,36 +1,17 @@
-
-
-
 <div class="container">
     <div class="row">
         <div class="col-lg-12">
             <div class="about_page">
                 <h1>Design Mentor</h1>
-
                 <ul>
-                    <li>After having a decade of experience in the creative industry. Viral is so passionate to help others who are beginners, interns & have started their careers recently.</li>
-
-                    <li>As a Mentor, He offers you a perspective for your creative ideas & career.</li>
-
-                    <li>He helps the designers, enhances their creativity & provides guidance for the career-related queries.</li>
-
-                    <li>From his then-unprecedented skills, creative techniques & expertise in design culture, Viral remains a cutting edge mentor & never lacks to generate Ideas for guidance.</li>
-
-                    <li>He helps you align your actions in the right direction with the necessarily needed approach.</li>
-
-                    <li>Here to help you with online strategies like designs, websites, SEO & paid campaigns, etc. to sell a product creatively and with ease.</li>
-
-                    <li>He shares information about his own career path, as well as provides guidance, motivation, emotional support, & role modelling as well.</li>
-
-                    <li>He also helps with exploring careers, setting goals, developing contacts, & identifying resources.</li>
-
-                    <li>He helps in articulating the best Ideas & quickly broadens their network & also elevates the level of professionalism.</li>
-
-                    <li>With his help & guidance, one can learn faster, make fewer mistakes & gain benefits from the experiences he shares.</li>
-
-                    <li>Furthermore, he also encourages people who have the same level of passion & love for the designs.</li>
-
-                    <li>He believes, Anyone can teach you software & tools, But a mentor is someone who helps you to generate IDEAS for your designs.</li>
+                    <li>Are you someone who has started your career lately and needs a guide to cross this not-so-smooth path? No worries, you can invest your trust in Viral Patel. Viral carries a decade’s experience in the Creative industry and is now all set to help blooming beginners and interns like you. He is a friend and a mentor who offers you a new perspective for your creative ideas and career. </li>
+                    <li>As a designer, you might have dicey thoughts when thinking about ways to enhance your creativity. Also, you might have several queries about your career. Viral is your helping hand to turn your dicey thoughts into a stable conclusion, along with guiding your career-related queries.</li>
+                    <li>What skills will you learn from him? Well, he’s a cutting-edge mentor and never lacks to generate ideas for guidance. In addition, he has expertise in design culture and creative techniques. As a newbie, your actions might require alignment to move in the right direction. Viral will induce these necessary skills while working with you.</li>
+                    <li>A true friend or mentor is someone who shares his mistakes with you so that you learn from them and try not to repeat them. Viral is one such mentor, or we should say, friend. He shares information about his own career path and enlightens his mistakes. Apart from that, he provides guidance, motivation, emotional support, and role modeling.</li>
+                    <li>We all know a very profound online presence is essential for a business. Viral knows how to take care of your virtual presence so that you can focus on other crucial areas of your business. He will help you curate designs, websites, SEO, paid campaigns, etc., to sell a product creatively and easily.</li>
+                    <li>One crucial part of the business is networking. As an intern or a new face in business, it is obvious you won’t have many contacts. But he will solve your problem by developing your contacts and identifying resources. Additionally, he will help articulate the best ideas and quickly broaden your network. Also, he will help you elevate your level of professionalism.</li>
+                    <li>He is a mentor who will help you explore careers and set goals. With his constant help and guidance, you can learn faster, make fewer mistakes and gain benefits from the experiences he shares. In addition, whenever you need a motivational pat on your back, he will encourage you with the same passion and love for the designs.</li>
+                    <li>In the end, he believes, “Anyone can teach you software and tools, but a mentor is someone who helps you to generate IDEAS for your designs.”</li>
                 </ul>
             </div>
         </div>
