--- a/src/app/motivational-speaker/motivational-speaker.component.html
+++ b/src/app/motivational-speaker/motivational-speaker.component.html
@@ -1,1 +1,18 @@
-<p>motivational-speaker works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="about_page">
+                <h1>Motivational Speaker</h1>
+                <ul>
+                    <li>What do you want when you are drained and exhausted by constant efforts? All you need is a motivational pat on your back with a couple of inspiring words. Viral assures that when you work with him, you get motivated throughout and never feel lack of support.</li>
+                    <li>The ultimate goal of a motivational speaker is to change people profoundly on an emotional and mental level, and to help them make some kind of professional or personal change in their lives and within themselves. Viral comprehends this well and helps you to focus on the opportunities by using any number of persuasive speech tactics to inspire and motivate.</li>
+                    <li>Viral teaches members of an organization how to apply his successful methods to a wide range of businesses today. He shares winning tips as well as learning tips with fresher designers, and startup entrepreneurs to improve employee morale, increase their productivity, and boost staff talents. As a visionary and influencer speaker, Viral loves to inspire and enlighten people.</li>
+                    <li>The most beautiful part about the challenges, the failures, and the hurdles is that they all make a person a good motivator. Viral is no less! Learning from his failures and obstacles has made him a better speaker. As a motivational speaker, Viral’s quintessential rags-to-riches success story of sacrifice, hard work, and perseverance as well as the unique and charismatic way he communicates it, will inspire and enlighten any audience to work harder and with better willpower.</li>
+                    <li>Viral’s pragmatic advice resonates with everyone from entry-level employees to small business owners and corporate CEOs. He assures that after a talk with him, you walk away with invaluable tools to incorporate into your professional creative endeavors. Being a philanthropist by nature, Viral will reveal how you too can gain success in your startup ideas and achieve your dreams.</li>
+                    <li>Much more than a business advisor, Viral shares his unique goal-setting techniques and goal-achieving strategies, which will empower you to make changes in all aspects of your life for success immediately as well as long-term. He has a reputation as an expert on the subject being discussed and will encourage you to look at things from a different perspective.</li>
+                    <li>So be it success in achieving your goals, or need your motivation back, or simply how to start the journey towards your dreams. You have a one-man for all your queries, he is none other than Viral. Take the next step to enlighten, educate, and inspire your audience while driving traffic to your business with a tint of Viral’s motivation. He has the power to inspire and enlighten you and make you work with more dedication to make your business stand out.</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+</div>
