--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -10,10 +10,45 @@
                 <ul>
                     <li>Software: Photoshop, HTML, MailChimp</li>
                 </ul>
+                <p><a href="https://barriersint.com/" target="_blank">https://barriersint.com/</a></p>
                 <p>#graphic #design #career #user #experience #interface #ux #ui</p>
             </div>
         </div>
 
+        <div class="col-lg-6">
+            <div class="projects1">
+                <h2>Find it Parts</h2>
+                <ul>
+                    <li>Software: Photoshop, Figma</li>
+                </ul>
+                <p><a href="https://www.finditparts.com/" target="_blank">https://www.finditparts.com/</a></p>
+                <p>#graphic #design #career #user #experience #interface #ux #ui</p>
+            </div>
+        </div>
+
+        <div class="col-lg-6">
+            <div class="projects1">
+                <h2>JP Morgan</h2>
+                <ul>
+                    <li>Software: Photoshop, Figma</li>
+                </ul>
+                <p><a href="https://www.jpmorgan.com/global" target="_blank">https://www.jpmorgan.com/global</a></p>
+                <p>#graphic #design #career #user #experience #interface #ux #ui</p>
+            </div>
+        </div>
+
+        <div class="col-lg-6">
+            <div class="projects1">
+                <h2>ICICI Bank</h2>
+                <ul>
+                    <li>Software: Photoshop, Figma</li>
+                </ul>
+                <p><a href="https://www.icicibank.com/" target="_blank">https://www.icicibank.com/</a></p>
+                <p>#graphic #design #career #user #experience #interface #ux #ui</p>
+            </div>
+        </div>                
+
+<!--
         <div class="col-lg-6">
             <div class="projects1">
                 <h2>Bharat Andolan</h2>
@@ -26,17 +61,6 @@
 
         <div class="col-lg-6">
             <div class="projects1">
-                <h2>Find it Parts</h2>
-                <ul>
-                    <li>Software: Photoshop, Figma</li>
-                    <li>https://www.finditparts.com/</li>
-                </ul>
-                <p>#graphic #design #career #user #experience #interface #ux #ui</p>
-            </div>
-        </div>
-
-        <div class="col-lg-6">
-            <div class="projects1">
                 <h2>LinkedIn Web Layout Redesign - User Profile</h2>
                 <ul>
                     <li>1st Jan 2020</li>
@@ -70,5 +94,8 @@
                 <p>#graphic #design #career #user #experience #interface #ux #ui</p>
             </div>
         </div>
+
+    -->
+
     </div>
 </div>
