--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -16,3 +16,45 @@ color: #333333;
 .active{
 opacity: 0.3;
 }
+
+.mobile_menu{
+  display: none;
+}
+
+
+@media only screen and (max-width: 768px){
+  .desktop_menu{
+    display: none;
+  }
+  .mobile_menu{
+    display: block;
+  }
+  .mobile_menu mat-drawer button{
+    display: block;
+    width: 100%;
+    text-align: left;
+    padding: 10px 15px 10px 15px;
+  }
+  .mat-drawer{
+    top: 66px;
+    position: fixed;
+    min-width: 200px;
+    left: 0;
+  }
+  .mat-drawer-container {
+    background-color: #fff;
+  }
+  .mat-toolbar{
+    height: 65px!important;
+  }
+  .toggle-mnn{
+    position: absolute;
+    right: 0;
+    top: 10px;
+  }
+  ::ng-deep .mat-drawer-backdrop {
+    height: 100%;
+    position: fixed !important;
+    top: 65px !important;
+  }
+}
