updated blog titles

--- a/src/app/blogs/blogs.component.html
+++ b/src/app/blogs/blogs.component.html
@@ -7,11 +7,9 @@
         <div class="col-lg-4">
             <div class="blogs">
                 <a mat-button routerLink="/blogs/blog-details">
-                    <h2>Creative People Are Not The Pressure Cooker: Understanding The Misconception</h2>
+                    <h2>Blog 01</h2>
                     <img src="assets/img/blogs.png">
-                    <p>
-                        The stereotype of the “tortured artist” or the “crazy genius” has been perpetuated for centuries, but it is far from the truth.
-                    </p>
+                    <p>Description Here...</p>
                 </a>
             </div>
         </div>
@@ -19,11 +17,9 @@
         <div class="col-lg-4">
             <div class="blogs">
                 <a mat-button routerLink="/blogs/blog-details">
-                    <h2>How to change your career from Graphic Design to UX Ui Designer?</h2>
+                    <h2>Blog 02</h2>
                     <img src="assets/img/blogs.png">
-                    <p>
-                        How to change your career from Graphic Design to UX Ui Designer?
-                    </p>
+                    <p>Description Here...</p>
                 </a>
             </div>
         </div>
@@ -31,13 +27,42 @@
         <div class="col-lg-4">
             <div class="blogs">
                 <a mat-button routerLink="/blogs/blog-details">
-                    <h2>Creative People Are Not The Pressure Cooker: Understanding The Misconception</h2>
+                    <h2>Blog 03</h2>
                     <img src="assets/img/blogs.png">
-                    <p>
-                        The stereotype of the “tortured artist” or the “crazy genius” has been perpetuated for centuries, but it is far from the truth.
-                    </p>
+                    <p>Description Here...</p>
                 </a>
             </div>
         </div>
+
+        <div class="col-lg-4">
+            <div class="blogs">
+                <a mat-button routerLink="/blogs/blog-details">
+                    <h2>Blog 04</h2>
+                    <img src="assets/img/blogs.png">
+                    <p>Description Here...</p>
+                </a>
+            </div>
+        </div>
+
+        <div class="col-lg-4">
+            <div class="blogs">
+                <a mat-button routerLink="/blogs/blog-details">
+                    <h2>Blog 05</h2>
+                    <img src="assets/img/blogs.png">
+                    <p>Description Here...</p>
+                </a>
+            </div>
+        </div>
+
+        <div class="col-lg-4">
+            <div class="blogs">
+                <a mat-button routerLink="/blogs/blog-details">
+                    <h2>Blog 06</h2>
+                    <img src="assets/img/blogs.png">
+                    <p>Description Here...</p>
+                </a>
+            </div>
+        </div>
+
     </div>
 </div>
